# horizon-cad

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/resources/: dark.qss  resources.qrc
src/cam/: CMakeLists.txt
src/cam/src/: FeedsAndSpeeds.cpp  GcodeWriter.cpp  Toolpath.cpp
src/constraint/: CMakeLists.txt
src/constraint/src/: Constraint.cpp  ConstraintSystem.cpp  GeometryRef.cpp  ParameterTable.cpp  SketchSolver.cpp
src/document/: CMakeLists.txt
src/document/src/: AssemblyDocument.cpp  BillOfMaterials.cpp  CollaborationSession.cpp  Commands.cpp  ConfigurationTable.cpp  ConstraintCommands.cpp  ConstraintSolveHelper.cpp  Document.cpp  DocumentManager.cpp  ExpressionEngine.cpp  FeatureTree.cpp  ParameterRegistry.cpp  Sketch.cpp  UndoStack.cpp
src/drafting/: CMakeLists.txt
src/drafting/src/: BlockTable.cpp  DraftAngularDimension.cpp  DraftArc.cpp  DraftBlockRef.cpp  DraftCircle.cpp  DraftDimension.cpp  DraftDocument.cpp  DraftEllipse.cpp  DraftEntity.cpp  DraftHatch.cpp  DraftLeader.cpp  DraftLine.cpp  DraftLinearDimension.cpp  DraftPolyline.cpp  DraftRadialDimension.cpp  DraftRectangle.cpp  DraftSpline.cpp  DraftText.cpp  Intersection.cpp  Layer.cpp  LineType.cpp  SketchPlane.cpp  SnapEngine.cpp  SpatialIndex.cpp
src/fileio/: CMakeLists.txt
src/fileio/schemas/: hzbinary.fbs
src/fileio/src/: BalloonRenderer.cpp  BinaryFormat.cpp  BomExport.cpp  DrawingDimensionRenderer.cpp  DrawingDocumentIO.cpp  DrawingExport.cpp  DxfFormat.cpp  GeometricToleranceRenderer.cpp  GltfExport.cpp  NativeFormat.cpp  StepFormat.cpp  StlExporter.cpp  TitleBlockRenderer.cpp
src/geometry/: CMakeLists.txt
src/kinematics/: CMakeLists.txt
src/kinematics/src/: ForwardKinematics.cpp  InverseKinematics.cpp
src/math/: CMakeLists.txt
src/math/src/: BoundingBox.cpp  Expression.cpp  Mat3.cpp  Mat4.cpp  Quaternion.cpp  Transform.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
src/modeling/: CMakeLists.txt
src/modeling/src/: AssemblySolver.cpp  BooleanOp.cpp  BoundaryMesh.cpp  ChamferOp.cpp  Draft.cpp  DrawingDimension.cpp  DrawingProjection.cpp  DrawingView.cpp  ExactPredicates.cpp  Extrude.cpp  FilletOp.cpp  GeometricTolerance.cpp  InterferenceChecker.cpp  Loft.cpp  MassProperties.cpp  MateGeometry.cpp  Measure.cpp  MeshCsg.cpp  MeshCsg.h  Pattern.cpp  PrimitiveFactory.cpp  ProfileValidator.cpp  ReferenceGeometry.cpp  Revolve.cpp  RingStack.cpp  RingStack.h  SectionView.cpp  Sheet.cpp  SheetMetal.cpp  SheetMetalSolid.cpp  Shell.cpp  SolidSewer.cpp  SolidTessellator.cpp  SurfaceSurfaceIntersection.cpp  Sweep.cpp
src/pdm/: CMakeLists.txt
src/pdm/src/: RevisionArchive.cpp  SemanticDiff.cpp  SyncEngine.cpp  VaultManifest.cpp
src/plugin/: CMakeLists.txt
src/plugin/src/: PluginRegistry.cpp
src/render/: CMakeLists.txt
src/render/shaders/: grid.frag  (+5 more)
src/scripting/: CMakeLists.txt
src/simulation/: CMakeLists.txt
src/topology/: CMakeLists.txt
src/ui/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cam/: CMakeLists.txt  test_FeedsAndSpeeds.cpp  test_Toolpath.cpp
tests/constraint/: CMakeLists.txt  test_ConstraintSolveHelper.cpp  test_Constraints.cpp  test_ParameterTable.cpp  test_SketchSolver.cpp
tests/document/: CMakeLists.txt  test_AssemblyDocument.cpp  test_BillOfMaterials.cpp  test_CollaborationSession.cpp  test_ConfigurationTable.cpp  test_DocumentManager.cpp  test_ExpressionEngine.cpp  test_FeatureTree.cpp  test_ParameterRegistry.cpp  test_Sketch.cpp
tests/drafting/: CMakeLists.txt  test_SketchPlane.cpp  test_SketchPlaneEdgeCases.cpp  test_SpatialIndex.cpp  test_SpatialIndexPerf.cpp
tests/fileio/: CMakeLists.txt  test_AssemblyFormat.cpp  test_BalloonRenderer.cpp  test_BinaryFormat.cpp  test_BomExport.cpp  test_DrawingDimensionRenderer.cpp  test_DrawingDocumentIO.cpp  test_DrawingExport.cpp  test_GeometricToleranceRenderer.cpp  test_GltfExport.cpp  test_PartFormat.cpp  test_StepFixtures.cpp  test_StepFormat.cpp  test_TitleBlockRenderer.cpp
tests/geometry/: CMakeLists.txt  test_NurbsCurve.cpp  test_NurbsSurface.cpp  test_SurfaceBuilder.cpp
tests/integration/: CMakeLists.txt  test_AssemblyMates.cpp  test_Era2Memory.cpp  test_Era3Pipeline.cpp  test_MultiDocument.cpp  test_Pipeline.cpp
tests/kinematics/: CMakeLists.txt  test_ForwardKinematics.cpp  test_InverseKinematics.cpp
tests/math/: CMakeLists.txt  test_BoundingBox.cpp  test_Expression.cpp  test_ExpressionEdgeCases.cpp  test_Mat4.cpp  test_Quaternion.cpp  test_RTree.cpp  test_Transform.cpp  test_Vec2.cpp  test_Vec3.cpp
tests/modeling/: CMakeLists.txt  test_AdversarialModels.cpp  test_AssemblySolver.cpp  test_BooleanOp.cpp  test_ChamferOp.cpp  test_Draft.cpp  test_DrawingDimension.cpp  test_DrawingProjection.cpp  test_DrawingView.cpp  test_ExactPredicates.cpp  test_Extrude.cpp  test_FilletOp.cpp  test_GeometricTolerance.cpp  test_InterferenceChecker.cpp  test_Loft.cpp  test_MassProperties.cpp  test_MateGeometry.cpp  test_Measure.cpp  test_Pattern.cpp  test_PrimitiveFactory.cpp  test_ProfileValidator.cpp  test_ReferenceGeometry.cpp  test_Revolve.cpp  test_SectionView.cpp  test_Sheet.cpp  test_SheetMetal.cpp  test_SheetMetalSolid.cpp  test_Shell.cpp  test_SolidTessellator.cpp  test_SurfaceSurfaceIntersection.cpp  test_Sweep.cpp
tests/pdm/: CMakeLists.txt  test_RevisionArchive.cpp  test_SemanticDiff.cpp  test_SyncEngine.cpp  test_VaultManifest.cpp
tests/plugin/: CMakeLists.txt  test_PluginRegistry.cpp
tests/render/: CMakeLists.txt  test_FrustumCuller.cpp  test_GpuTessellator.cpp  test_InstanceBatcher.cpp  test_MaterialLibrary.cpp  test_OpenGLBackend.cpp  test_PathTracer.cpp  test_RenderBackend.cpp  test_VulkanBackend.cpp
tests/scripting/: CMakeLists.txt  test_ScriptEngine.cpp
tests/simulation/: CMakeLists.txt  test_Fatigue.cpp  test_HeatTransfer.cpp  test_LinearElement.cpp  test_LinearStaticSolver.cpp  test_ModalSolver.cpp  test_SolidMesher.cpp
tests/topology/: CMakeLists.txt  test_EulerOps.cpp  test_TopologyID.cpp
tests/ui/: CMakeLists.txt  test_LocaleManager.cpp
(+337 files in other folders)
