add_subdirectory(math)
add_subdirectory(geometry)
add_subdirectory(render)
add_subdirectory(drafting)
add_subdirectory(constraint)
add_subdirectory(topology)
add_subdirectory(modeling)
add_subdirectory(document)
add_subdirectory(fileio)
add_subdirectory(simulation)
add_subdirectory(pdm)
if(HZ_SCRIPTING_ENABLED)
    add_subdirectory(scripting)
endif()
add_subdirectory(ui)
add_subdirectory(app)
