add_subdirectory(math)
add_subdirectory(geometry)
add_subdirectory(constraint)
add_subdirectory(drafting)
add_subdirectory(document)
add_subdirectory(fileio)
add_subdirectory(topology)
add_subdirectory(modeling)
add_subdirectory(simulation)
add_subdirectory(pdm)
add_subdirectory(kinematics)
add_subdirectory(cam)
add_subdirectory(render)
add_subdirectory(integration)
if(HZ_SCRIPTING_ENABLED)
    add_subdirectory(scripting)
endif()
