add_executable(hz_modeling_tests
    test_PrimitiveFactory.cpp
    test_ProfileValidator.cpp
    test_Extrude.cpp
    test_Revolve.cpp
    test_SolidTessellator.cpp
    test_ExactPredicates.cpp
    test_SurfaceSurfaceIntersection.cpp
    test_BooleanOp.cpp
    test_FilletOp.cpp
    test_ChamferOp.cpp
    test_MateGeometry.cpp
    test_AssemblySolver.cpp
    test_Loft.cpp
    test_Sweep.cpp
    test_Draft.cpp
    test_Shell.cpp
    test_Pattern.cpp
    test_ReferenceGeometry.cpp
    test_InterferenceChecker.cpp
    test_MassProperties.cpp
    test_Measure.cpp
)

target_link_libraries(hz_modeling_tests
    PRIVATE
        Horizon::Modeling
        Horizon::Topology
        Horizon::Drafting
        Horizon::Render
        GTest::gtest
        GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(hz_modeling_tests)
